@@ -21,6 +21,38 @@ class TestNSSetInteraction( unittest.TestCase ):
             self.assert_( i in x )
             self.assert_( x.containsObject_( i ) )
 
+    def test_varargsConstruction(self):
+        w = NSSet.setWithObjects_(0,1,2,3,None)
+        x = NSSet.alloc().initWithObjects_(0,1,2,3,None)
+        y = NSSet.setWithObjects_count_(range(10), 4)
+        z = NSSet.alloc().initWithObjects_count_(range(10), 4)
+
+        self.assert_(len(w) == 4)
+        self.assert_(len(x) == 4)
+        self.assert_(len(y) == 4)
+        self.assert_(len(z) == 4)
+
+        self.assert_(0 in w)
+        self.assert_(1 in x)
+        self.assert_(2 in y)
+        self.assert_(3 in z)
+
+    def test_varargsConstruction2(self):
+        w = NSMutableSet.setWithObjects_(0,1,2,3,None)
+        x = NSMutableSet.alloc().initWithObjects_(0,1,2,3,None)
+        y = NSMutableSet.setWithObjects_count_(range(10), 4)
+        z = NSMutableSet.alloc().initWithObjects_count_(range(10), 4)
+
+        self.assert_(len(w) == 4)
+        self.assert_(len(x) == 4)
+        self.assert_(len(y) == 4)
+        self.assert_(len(z) == 4)
+
+        self.assert_(0 in w)
+        self.assert_(1 in x)
+        self.assert_(2 in y)
+        self.assert_(3 in z)
+
 def suite():
     suite = unittest.TestSuite()
     suite.addTest( unittest.makeSuite( TestNSSetInteraction ) )
